--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 40px;
   padding: 0 20px;
   border-bottom: 1px solid var(--border-color);
 }
@@ -10,10 +11,28 @@
   text-decoration: none;
 }
 
+.header__logo:hover {
+  color: var(--blue);
+}
+
+.header__cart-icon {
+  color: cadetblue;
+}
+
 .header__logo-link {
   font-family: 'Playfair Display', sans-serif;
-  font-size: 30px;
+  font-size: 40px;
   font-weight: 700;
   color: inherit;
   text-decoration: none;
+}
+
+.header__cart-link {
+  color: inherit;
+  font: inherit;
+  text-decoration: none;
+}
+
+.header__cart-link:hover {
+  text-decoration: underline;
 }
