--- a/src/components/spinner/spinner.css
+++ b/src/components/spinner/spinner.css
@@ -32,7 +32,7 @@
   position: absolute;
   width: 160px;
   height: 160px;
-  border: 20px solid #00bc8c;
+  border: 20px solid var(--blue);
   border-top-color: transparent;
   border-radius: 50%;
 }
