--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,4 +1,7 @@
 .header {
+  position: sticky;
+  top: 0;
+  background-color: #fff;
   display: flex;
   align-items: center;
   justify-content: space-between;
